@@ -21,6 +21,7 @@
 
 - Fixed a parser error for mode -m 9820 = MS Office <= 2003 $3, SHA1 + RC4, collider #2
 - Fixed a problem with changed current working directory, for instance by using --restore together with --remove
+- Fixed a memory problem that occured when the OpenCL folder was not found and e.g. the shared and session folder were the same
 
 ##
 ## Improvements
